# transformer

./: README.md  SYLLABUS.md  pyproject.toml
chapters/ch01_attention/: README.md  pyproject.toml
chapters/ch01_attention/docs/: 01_attention_intuition.md  02_scaled_dot_product.md  03_multihead_attention.md  04_references.md
chapters/ch01_attention/extension/: attention_qna.md  bottleneck_demo.py
chapters/ch01_attention/lab01_dot_product/: README.md
chapters/ch01_attention/lab01_dot_product/solutions/: attention.py
chapters/ch01_attention/lab01_dot_product/src/: attention.py
chapters/ch01_attention/lab01_dot_product/tests/: test_attention.py
chapters/ch01_attention/lab02_visualization/: README.md
chapters/ch01_attention/lab02_visualization/src/: visualization.py
chapters/ch01_attention/lab02_visualization/tests/: test_visualization.py
chapters/ch01_attention/lab03_multihead/: README.md
chapters/ch01_attention/lab03_multihead/src/: multihead.py
chapters/ch01_attention/lab03_multihead/tests/: test_multihead.py
chapters/ch01_attention/lab04_pytorch_comparison/: README.md
chapters/ch01_attention/lab04_pytorch_comparison/src/: comparison.py
chapters/ch01_attention/lab04_pytorch_comparison/tests/: test_comparison.py
chapters/ch02_transformer_block/docs/: 01_residuals_and_normalization.md  02_positional_encoding.md  03_feed_forward_network.md  04_transformer_block.md  05_references.md
chapters/ch02_transformer_block/lab01_layer_norm/: README.md
chapters/ch02_transformer_block/lab02_positional_encoding/: README.md
chapters/ch08_memory_inference/: README.md  pyproject.toml
chapters/ch08_memory_inference/docs/: 01_memory_bound_inference.md  02_kv_cache.md  03_batching_strategies.md  04_quantization_basics.md  05_references.md
chapters/ch08_memory_inference/lab01_memory_bandwidth/: README.md
chapters/ch08_memory_inference/lab01_memory_bandwidth/src/: memory_analysis.py
chapters/ch08_memory_inference/lab01_memory_bandwidth/tests/: test_memory_analysis.py
chapters/ch08_memory_inference/lab02_kv_cache/: README.md
chapters/ch08_memory_inference/lab02_kv_cache/src/: kv_cache.py
chapters/ch08_memory_inference/lab02_kv_cache/tests/: test_kv_cache.py
chapters/ch08_memory_inference/lab03_batching/: README.md
chapters/ch08_memory_inference/lab03_batching/src/: batching.py
chapters/ch08_memory_inference/lab03_batching/tests/: test_batching.py
chapters/ch08_memory_inference/lab04_quantization/: README.md
chapters/ch08_memory_inference/lab04_quantization/src/: quantization.py
chapters/ch08_memory_inference/lab04_quantization/tests/: test_quantization.py
chapters/ch09_inference_frameworks/: README.md  pyproject.toml
chapters/ch09_inference_frameworks/docs/: 01_paged_attention.md  02_vllm_architecture.md  03_llama_cpp.md  04_sglang.md  05_framework_comparison.md
chapters/ch09_inference_frameworks/lab01_huggingface/: README.md
chapters/ch09_inference_frameworks/lab01_huggingface/src/: hf_basics.py
chapters/ch09_inference_frameworks/lab01_huggingface/tests/: test_hf_basics.py
chapters/ch09_inference_frameworks/lab02_vllm/: README.md
chapters/ch09_inference_frameworks/lab02_vllm/src/: vllm_serving.py
chapters/ch09_inference_frameworks/lab02_vllm/tests/: test_vllm_serving.py
chapters/ch09_inference_frameworks/lab03_llamacpp/: README.md
chapters/ch09_inference_frameworks/lab03_llamacpp/src/: llamacpp_inference.py
chapters/ch09_inference_frameworks/lab03_llamacpp/tests/: test_llamacpp_inference.py
chapters/ch09_inference_frameworks/lab04_sglang/: README.md
chapters/ch09_inference_frameworks/lab04_sglang/src/: structured_gen.py
chapters/ch09_inference_frameworks/lab04_sglang/tests/: test_structured_gen.py
chapters/ch09_inference_frameworks/lab05_benchmark/: README.md
chapters/ch09_inference_frameworks/lab05_benchmark/src/: __init__.py  benchmark.py
chapters/ch09_inference_frameworks/lab05_benchmark/tests/: __init__.py  test_benchmark.py
overview/: README.md  evolution_timeline.md  linear_attention_path.md  sparse_attention_path.md
shared/: pyproject.toml
shared/src/shared/: __init__.py  utils.py
shared/src/shared/data/: tiny_shakespeare.txt
shared/tests/: test_utils.py
(+184 files in other folders)
