[project]
name = "topeka"
version = "0.1.0"
description = "A hands-on, test-driven course for learning transformer architectures"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Root workspace has no direct dependencies - each chapter manages its own
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.1",
    "mypy>=1.0",
]
# Additional deps for later chapters
huggingface = [
    "transformers>=4.35",
    "datasets>=2.14",
    "tokenizers>=0.15",
]
inference = [
    "vllm>=0.2",
]
hardware = [
    "triton>=2.1",
    "jax[cpu]>=0.4",
]

# No [build-system] - this is a virtual workspace root, not a package

[dependency-groups]
dev = [
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.uv.workspace]
members = [
    "shared",
    "chapters/*",
]

[tool.pytest.ini_options]
testpaths = ["chapters", "shared"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line length handled separately

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
