[project]
name = "ch01-attention"
version = "0.1.0"
description = "Chapter 1: The Attention Mechanism"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["lab01_dot_product/tests", "lab02_visualization/tests", "lab03_multihead/tests", "lab04_pytorch_comparison/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
