[project]
name = "ch08-memory-inference"
version = "0.1.0"
description = "Chapter 8: Memory & Inference Optimization"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["lab01_memory_bandwidth/tests", "lab02_kv_cache/tests", "lab03_batching/tests", "lab04_quantization/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
